--- a/input/_layouts/ru.haml
+++ b/input/_layouts/ru.haml
@@ -2,7 +2,7 @@
   %head
     %title
       {{page | to_title: "Звукорежиссер"}}
-      &mdash; Александр Федоров
+      &mdash; Александр Фёдоров
 
     %base{:href => "/"}
     :javascript
@@ -27,7 +27,7 @@
         %section
           .left
             %h1 
-              %a{:href => "/about/"} Александр Федоров
+              %a{:href => "/about/"} Александр Фёдоров
               %span<> 
                 , 
                 %a{:href => "/about/profession/"} звукорежиссёр
@@ -114,7 +114,7 @@
     %footer
       %p 
         %a{:href => "/about/"}<>
-          Александр Федоров
+          Александр Фёдоров
       %menu
         %li.selected
           %a{:href => "/"}
