--- a/output/stylesheets/screen.css
+++ b/output/stylesheets/screen.css
@@ -100,23 +100,28 @@ a:hover {
   border-bottom-color: transparent;
 }
 
-/* line 34, ../../input/stylesheets/screen.sass */
+/* line 33, ../../input/stylesheets/screen.sass */
+pre {
+  font-family: monospace;
+}
+
+/* line 37, ../../input/stylesheets/screen.sass */
 h1 a, h2 a {
   text-shadow: 0 1px 1px white;
 }
 
-/* line 37, ../../input/stylesheets/screen.sass */
+/* line 40, ../../input/stylesheets/screen.sass */
 h1 {
   font-size: 1.5em;
   line-height: 1em;
 }
 
-/* line 40, ../../input/stylesheets/screen.sass */
+/* line 43, ../../input/stylesheets/screen.sass */
 h1, h2 {
   font-family: "Open Sans Condensed";
 }
 
-/* line 43, ../../input/stylesheets/screen.sass */
+/* line 46, ../../input/stylesheets/screen.sass */
 header > section, main > section, .player > section, .contact > section, footer, .introduction > section {
   max-width: 1120px;
   min-width: 600px;
@@ -124,16 +129,16 @@ header > section, main > section, .player > section, .contact > section, footer,
   padding: 0 3em;
 }
 
-/* line 49, ../../input/stylesheets/screen.sass */
+/* line 52, ../../input/stylesheets/screen.sass */
 header > section, .player > section, .contact > section, footer, .introduction > section, body.about main > section {
   max-width: 750px;
 }
 
-/* line 52, ../../input/stylesheets/screen.sass */
+/* line 55, ../../input/stylesheets/screen.sass */
 .introduction > section {
   padding-top: 1.5em;
 }
-/* line 55, ../../input/stylesheets/screen.sass */
+/* line 58, ../../input/stylesheets/screen.sass */
 .introduction > section blockquote {
   font-family: Georgia;
   font-style: italic;
@@ -144,7 +149,7 @@ header > section, .player > section, .contact > section, footer, .introduction >
   margin: 0;
   margin-right: 230px;
 }
-/* line 65, ../../input/stylesheets/screen.sass */
+/* line 68, ../../input/stylesheets/screen.sass */
 .introduction > section blockquote:before {
   display: block;
   content: "\201C";
@@ -154,7 +159,7 @@ header > section, .player > section, .contact > section, footer, .introduction >
   top: 0.223em;
   color: #7a7a7a;
 }
-/* line 73, ../../input/stylesheets/screen.sass */
+/* line 76, ../../input/stylesheets/screen.sass */
 .introduction > section blockquote a {
   line-height: 0.85em;
   color: inherit;
@@ -163,7 +168,7 @@ header > section, .player > section, .contact > section, footer, .introduction >
   -o-transition: color 0.4s;
   transition: color 0.4s;
 }
-/* line 78, ../../input/stylesheets/screen.sass */
+/* line 81, ../../input/stylesheets/screen.sass */
 .introduction > section blockquote:hover a {
   color: #007511;
 }
@@ -939,31 +944,46 @@ main > section > h2 {
   font-size: 1.25em;
   line-height: 1.2em;
 }
-/* line 32, ../../input/stylesheets/_main.sass */
+/* line 31, ../../input/stylesheets/_main.sass */
+main > section h3 {
+  font-weight: bold;
+}
+/* line 35, ../../input/stylesheets/_main.sass */
 main > section > h1 + *, main > section > h2 + *, main > section > ul + *, main > section > p + *, main > section > dl + * {
   margin-top: 1.5em;
 }
-/* line 34, ../../input/stylesheets/_main.sass */
+/* line 37, ../../input/stylesheets/_main.sass */
 main > section > h1 + ul, main > section > h1 + dl, main > section > h2 + ul, main > section > h2 + dl, main > section > ul + ul, main > section > ul + dl, main > section > p + ul, main > section > p + dl, main > section > dl + ul, main > section > dl + dl {
   margin-top: 0.75em;
 }
-/* line 37, ../../input/stylesheets/_main.sass */
+/* line 41, ../../input/stylesheets/_main.sass */
+main > section li p + p, main > section li h3, main > section li h2 {
+  margin-top: 1.5em;
+}
+/* line 44, ../../input/stylesheets/_main.sass */
 main > section > ul {
   list-style: square;
 }
-/* line 39, ../../input/stylesheets/_main.sass */
+/* line 46, ../../input/stylesheets/_main.sass */
 main > section > ul > li {
   margin-left: 1.2em;
 }
-/* line 41, ../../input/stylesheets/_main.sass */
+/* line 48, ../../input/stylesheets/_main.sass */
 main > section > ul ul {
   list-style: circle;
 }
-/* line 43, ../../input/stylesheets/_main.sass */
+/* line 50, ../../input/stylesheets/_main.sass */
 main > section > ul ul > li {
   margin-left: 1.2em;
 }
-/* line 46, ../../input/stylesheets/_main.sass */
+/* line 53, ../../input/stylesheets/_main.sass */
+main > section pre {
+  font-size: 0.75em;
+  line-height: 2em;
+  margin-top: 0.75em;
+  margin-bottom: 1.5em;
+}
+/* line 58, ../../input/stylesheets/_main.sass */
 main > section > dl {
   *zoom: 1;
 }
@@ -976,23 +996,23 @@ main > section > dl:after {
   overflow: hidden;
   visibility: hidden;
 }
-/* line 48, ../../input/stylesheets/_main.sass */
+/* line 60, ../../input/stylesheets/_main.sass */
 main > section > dl dt {
   width: 160px;
   float: left;
   clear: left;
   color: #666666;
 }
-/* line 53, ../../input/stylesheets/_main.sass */
+/* line 65, ../../input/stylesheets/_main.sass */
 main > section > dl dd {
   margin-left: 160px;
 }
-/* line 55, ../../input/stylesheets/_main.sass */
+/* line 67, ../../input/stylesheets/_main.sass */
 main > section img {
   max-width: 100%;
 }
 
-/* line 58, ../../input/stylesheets/_main.sass */
+/* line 70, ../../input/stylesheets/_main.sass */
 .tooltip {
   position: absolute;
   width: 240px;
@@ -1003,12 +1023,12 @@ main > section img {
   -o-transition: opacity 0.5s;
   transition: opacity 0.5s;
 }
-/* line 64, ../../input/stylesheets/_main.sass */
+/* line 76, ../../input/stylesheets/_main.sass */
 .tooltip[hidden] {
   opacity: 0;
   display: block;
 }
-/* line 69, ../../input/stylesheets/_main.sass */
+/* line 81, ../../input/stylesheets/_main.sass */
 .tooltip:not(.invert) > span {
   position: relative;
   -webkit-border-radius: 6px;
@@ -1049,7 +1069,7 @@ main > section img {
   top: 50%;
   margin-top: -12px;
 }
-/* line 71, ../../input/stylesheets/_main.sass */
+/* line 83, ../../input/stylesheets/_main.sass */
 .tooltip > span {
   display: block;
   color: white;
@@ -1058,7 +1078,7 @@ main > section img {
   font-size: 0.875em;
   line-height: 1.71429em;
 }
-/* line 78, ../../input/stylesheets/_main.sass */
+/* line 90, ../../input/stylesheets/_main.sass */
 .tooltip.invert > span {
   position: relative;
   -webkit-border-radius: 6px;
@@ -1394,43 +1414,43 @@ footer p {
     width: auto;
   }
 }
-/* line 92, ../../input/stylesheets/screen.sass */
+/* line 95, ../../input/stylesheets/screen.sass */
 body.about .introduction {
   display: none;
 }
 
 @media (max-width: 700px) {
-  /* line 97, ../../input/stylesheets/screen.sass */
+  /* line 100, ../../input/stylesheets/screen.sass */
   menu .language.icon {
     display: none;
   }
 
-  /* line 101, ../../input/stylesheets/screen.sass */
+  /* line 104, ../../input/stylesheets/screen.sass */
   main > section > h1 + menu {
     margin-top: 0em;
     display: inline;
   }
-  /* line 104, ../../input/stylesheets/screen.sass */
+  /* line 107, ../../input/stylesheets/screen.sass */
   main > section .columns {
     margin-top: 0.75em;
   }
 
-  /* line 106, ../../input/stylesheets/screen.sass */
+  /* line 109, ../../input/stylesheets/screen.sass */
   header > section, main > section, .player > section, .contact > section, footer, .introduction > section {
     padding-left: 0.5em;
     padding-right: 0.5em;
     min-width: 304px;
   }
 
-  /* line 111, ../../input/stylesheets/screen.sass */
+  /* line 114, ../../input/stylesheets/screen.sass */
   .introduction > section {
     padding-top: 1.125em;
   }
-  /* line 112, ../../input/stylesheets/screen.sass */
+  /* line 115, ../../input/stylesheets/screen.sass */
   .introduction > section blockquote {
     margin-right: 0;
   }
-  /* line 114, ../../input/stylesheets/screen.sass */
+  /* line 117, ../../input/stylesheets/screen.sass */
   .introduction > section blockquote > p {
     font-size: 0.875em;
     line-height: 1.71429em;
