--- a/output/stylesheets/screen.sass
+++ b/output/stylesheets/screen.sass
@@ -30,6 +30,9 @@ a
   &:hover
     :border-bottom-color transparent
 
+pre
+  :font-family monospace
+
 h1, h2
   a
     +text-shadow(0 1px 1px #fff)
